--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Steamulate
-url: "https://steamulate.tk"
+url: "https://steamulate.eunoware.com"
 baseurl:
 google_analytics_key: "UA-131355319-1"
 
